--- a/KompjuterskaOprema/Views/Shared/_Korisnik.cshtml
+++ b/KompjuterskaOprema/Views/Shared/_Korisnik.cshtml
@@ -1,26 +1,12 @@
-﻿<link href="~/AdminTemplate/stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
-<link href="~/AdminTemplate/stylesheets/pixel-admin.css" rel="stylesheet" type="text/css">
-<link href="~/AdminTemplate/stylesheets/widgets.css" rel="stylesheet" type="text/css">
-<link href="~/AdminTemplate/stylesheets/rtl.css" rel="stylesheet" type="text/css">
-<link href="~/AdminTemplate/stylesheets/themes.css" rel="stylesheet" type="text/css">
-<li class="caption-menu">Upravnik</li>
+﻿
+<li class="caption-menu">Korisnik</li>
 
+
+ 
 
     <li>
 
-        <a href="@Url.Action("Index", "Ugovor", new {Area = "ModulUprava"})"><i class="menu-icon fa fa-dashboard"></i><span class="mm-text">Dodaj artikal</span></a>
+        <a href="@Url.Action("Index", "Prijemnica")"><i class="menu-icon fa fa-dashboard"></i><span class="mm-text">Historija prijemnica</span></a>
     </li>
 
-    <li>
 
-        <a href="@Url.Action("Index", "Desavanja", new {Area = "ModulUprava"})"><i class="menu-icon fa fa-dashboard"></i><span class="mm-text">Evidentiraj prijemnicu</span></a>
-    </li>
-
-<script src="~/AdminTemplate/javascripts/pixel-admin.js"></script>
-<script src="~/AdminTemplate/javascripts/libs/jquery-datatables-1.10.0/datatables.bootstrap3.js"></script>
-
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&subset=latin" rel="stylesheet" type="text/css">
-
-
-<script src="~/AdminTemplate/javascripts/pixel-admin.js"></script>
-<script src="~/AdminTemplate/javascripts/libs/jquery-datatables-1.10.0/datatables.bootstrap3.js"></script>
