--- a/KompjuterskaOprema/Views/Prijemnica/Index.cshtml
+++ b/KompjuterskaOprema/Views/Prijemnica/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model KompjuterskaOprema.Controllers.PrijemnicaController.IndexVM
 
+
+
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 <br />
 
 <div class="form-group">
@@ -48,7 +52,8 @@
         </tr>
     }
 </table>
-<br />
 <div id="div"></div>
+<br />
+
 
 
