--- a/KompjuterskaOprema/Views/Prijemnica/Index.cshtml
+++ b/KompjuterskaOprema/Views/Prijemnica/Index.cshtml
@@ -7,7 +7,7 @@
 <br />
 
 <div class="form-group">
-    <label class="control-label">Broj prijemnica </label>
+    <label class="control-label">Ukupno prijemnica: </label>
     <label style="color: palevioletred">@Model.broj</label>
 </div>
 
