--- a/KompjuterskaOprema/Views/Shared/_Korisnik.cshtml
+++ b/KompjuterskaOprema/Views/Shared/_Korisnik.cshtml
@@ -10,3 +10,7 @@
     </li>
 
 
+<li>
+
+    <a href="@Url.Action("Dodaj", "Prijemnica")"><i class="menu-icon fa fa-dashboard"></i><span class="mm-text">Dodaj prijemnicu</span></a>
+</li>
