--- a/KompjuterskaOprema/Views/Prijemnica/Detalji.cshtml
+++ b/KompjuterskaOprema/Views/Prijemnica/Detalji.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
 }
-
+<br />
 <h3 style="color:darkcyan">Detalji prijemnice</h3>
 <div class="row">
     <div class="col-md-4">
@@ -12,7 +12,7 @@
                 <tr>
 
                     <th>Artikal</th>
-                    <th>Jedinična cijena </th>
+                    <th>Cijena </th>
                     <th>Količina</th>
                     <th>Ukupno</th>
 
@@ -35,12 +35,14 @@
                         if (z.Id == x.ArtikalId)
                         {
                             <td> @z.Naziv</td>
+                        <td>@z.Cijena</td>
+    <td>@x.Kolicina</td>
+    <td>@(x.Kolicina * z.Cijena) KM</td>
                         }
                     }
 
-                    <td>@x.JedinicnaCijena KM</td>
-                    <td>@x.Kolicina</td>
-                    <td>@(x.Kolicina*x.JedinicnaCijena) KM</td>
+                   
+                    
             </tr>
             }
         </table>
