--- a/KompjuterskaOprema/Views/Prijemnica/PrijemnicaDodaj.cshtml
+++ b/KompjuterskaOprema/Views/Prijemnica/PrijemnicaDodaj.cshtml
@@ -1,5 +1,70 @@
-﻿@{
-    ViewBag.Title = "PrijemnicaDodaj";
-}
+﻿
+@using KompjuterskaOprema.Models
+@using KompjuterskaOprema
+<h2>Dodaj novu prijemnicu</h2>
+@model  KompjuterskaOprema.Controllers.PrijemnicaController.UrediVM
 
-<h2>PrijemnicaDodaj</h2>
+
+<br />
+
+<form action="/Prijemnica/AddToKorpa1" method="post">
+
+    @Html.HiddenFor(model => model.Id)
+
+
+
+
+    <div class="form-horizontal">
+        @Html.HiddenFor(model => model.Id)
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+
+
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.DobavljacId, "Dobavljač", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.DobavljacId, Model.DobavljacStavke, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DobavljacId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ArtikalId, "Artikal", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.ArtikalId, Model.ArtikalStavke, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ArtikalId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+           @Html.LabelFor(model => model.kolicina, "Količina", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.kolicina, Model.KolicinaStavke, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.kolicina, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Dodaj stavku" class="btn btn-default" />
+            </div>
+           
+                @*@Ajax.ActionLink("Sacuvaj", "Stavke", new { Id = Model.Id }, new AjaxOptions { UpdateTargetId = "div" }, new { @class = "btn btn-primary btn-sm" })*@
+     
+        </div>
+
+
+
+    </div>
+
+</form>
+@if (GlobalHelp.AktivnePrijemnice != null)
+{
+    <br />
+
+    <h3 style="color:darkcyan">Stavke (@GlobalHelp.AktivnePrijemnice.PrijemnicaStavke.Count ) </h3>
+@Html.Action("Stavke", "Prijemnica", new { Id = @GlobalHelp.AktivnePrijemnice.Id})
+}
+<div id="div"></div>
+<br />
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
